--- a/DatePicker/Base.lproj/Main.storyboard
+++ b/DatePicker/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,46 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DatePicker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MM/DD/YY HH:MM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VR9-i2-iGc">
+                                <rect key="frame" x="66" y="77" width="243" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="trn-iK-X9u">
+                                <rect key="frame" x="0.0" y="169" width="375" height="216"/>
+                                <date key="date" timeIntervalSinceReferenceDate="540123818.69177306">
+                                    <!--2018-02-12 10:23:38 +0000-->
+                                </date>
+                                <connections>
+                                    <action selector="selectdate:" destination="BYZ-38-t0r" eventType="valueChanged" id="Uqo-Ea-Kor"/>
+                                </connections>
+                            </datePicker>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="VR9-i2-iGc" firstAttribute="top" secondItem="9hj-ky-Xob" secondAttribute="top" constant="57" id="2Y7-QV-43f"/>
+                            <constraint firstItem="9hj-ky-Xob" firstAttribute="trailing" secondItem="VR9-i2-iGc" secondAttribute="trailing" constant="66" id="Gdb-0J-T7W"/>
+                            <constraint firstItem="trn-iK-X9u" firstAttribute="leading" secondItem="9hj-ky-Xob" secondAttribute="leading" id="WdU-dR-jcx"/>
+                            <constraint firstItem="trn-iK-X9u" firstAttribute="top" secondItem="VR9-i2-iGc" secondAttribute="bottom" constant="71" id="jyV-2L-SVh"/>
+                            <constraint firstItem="VR9-i2-iGc" firstAttribute="leading" secondItem="9hj-ky-Xob" secondAttribute="leading" constant="66" id="pFp-Pg-KZ0"/>
+                            <constraint firstItem="trn-iK-X9u" firstAttribute="trailing" secondItem="9hj-ky-Xob" secondAttribute="trailing" id="q0b-OX-Emb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9hj-ky-Xob"/>
                     </view>
+                    <connections>
+                        <outlet property="datelabel" destination="VR9-i2-iGc" id="VD1-Cr-BLI"/>
+                        <outlet property="datepicker" destination="trn-iK-X9u" id="etj-mb-fPC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
         </scene>
     </scenes>
 </document>
